# web3-utils.py

./: .bumpversion.cfg  .editorconfig  .gitignore  LICENSE.md  Makefile  README.md  README.rst  brownie-config.yaml  hardhat.config.js  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: sast.yml  tests.yml
scripts/: test_package.py
tests/: test_async_beacon.py  test_cache.py  test_compute_time_at_slot.py  test_convert_to_standard_notation.py  test_divide_chunks.py  test_gitlab.py  test_gwei_to_wei.py  test_hash_event_param.py  test_is_null_address.py  test_load_public_keys_from_files.py  test_normalize_address.py  test_retryable_eth_module.py  test_split_validator_pubkey_bytes.py
web3_utils/: async_beacon.py  cache.py  calculate_max_fees.py  compute_time_at_slot.py  convert_to_standard_notation.py  current_utc_timestamp.py  divide_chunks.py  gitlab.py  gwei_to_wei.py  hash_event_param.py  is_null_address.py  load_public_keys_from_files.py  normalize_address.py  retryable_eth_module.py  split_validator_pubkey_bytes.py
