[metadata]
name = stakefish-web3-utils
version = 0.0.5
description = Stakefish’s web3 utils for Python
author = Michal Baranowski <mbaranovski@stake.fish>, Mateusz Sokola <mateusz@stake.fish>
url = https://github.com/stakefish/web3-utils
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.10
packages = find:
install_requires =
    web3
    tenacity

[options.extras_require]
tests =
    eth-brownie
    pytest-asyncio
    pytest-mock

[options.packages.find]
exclude =
    tests*
    scripts*
    docs*
    test_*
